index and style modified.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
            <a href="#" class="header-links">Gmail</a>
             <a href="#" class="header-links">Images</a>
             <a href="#" class="header-links">
-                <img src="./images/appicon.png" alt="appicon_icon"></a>
+                <img id="appicon" src="./images/appicon.png" alt="appicon_icon" ></a>
             <button class="header-links" id="sign-button">Sign In</button>
         </nav>
         <div class="clear"></div>
@@ -29,14 +29,15 @@
         
         <input type="text" name="search" id="search">
         <img id="magnify" src="./images/magnifying_glass.jpg" alt="magnify-glass">
-        <a href="./images/google_microphone.png" alt="microphone"></a>
+        <a href="#">
+        <img src="./images/google_microphone.png" alt="microphone" id="microphone"></a>
     </div >
     <div class="but">
-            <input id="but1" type="button" value="Goggle Search">
+            <input id="but1" type="button" value="Google Search">
             <input id="but2" type="button" value="I'm Feeling Lucky">
     </div>
     <div class="but">
-            <article>Other Languages you can use Google <a href="#">English</a>  </article> 
+            <article>Other Languages you can use Google <a href="#"><span id="span-lang">English</span></a>  </article> 
     </div>
    
         
